# hwyTrafficPred

./: .gitignore  README.md  createDataset.ipynb  eda.ipynb  pyproject.toml  requirements.txt  training.ipynb  validation.ipynb
db/: traffic_data_to_db.py
lib/: datapreparing.py  subdatasets.py
lib/tisvcloud/: PublicClass.py  cms.py  etc.py  vd.py
lib/tisvcloud/tdcs/: m03A.py
model/: model.pth
model/v1/: model.pth  params.txt  training_short_term_pred.ipynb
model/v2/: model.pth  params.txt  training_short_term_pred.ipynb
pipeline/: dev.ipynb  traffic_data_to_db.py
toolkits/: .env  datapreparing.py  datasets.py
toolkits/tisvcloud/: cms.py  etc.py
toolkits/tisvcloud/tdcs/: m04A.py
utils/: datasets.py
utils/data/: dataset.py  operator.py  preparing.py  preprocessing.py
